[package]
name = "dwt_test"
authors = ["Josh Gao <josh@jmgao.dev>"]
license = "MIT"

version = "0.0.0"
edition = "2018"

[dependencies]
cortex-m = { version = "0.6", features = ["inline-asm", "const-fn"] }
cortex-m-rt = { version = "0.6.9", features = ["device"] }
cortex-m-semihosting = { version = "0.3.3", features = ["inline-asm"] }
panic-semihosting = { version = "0.5", features = ["inline-asm"] }

cortex-m-rtfm = { version = "0.4", features = ["timer-queue"] }
stm32f1xx-hal = { version = "0.3", features = ["rt", "stm32f103"] }
